--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@angular/router": "~3.1.0",
     "cnp.js": "0.0.2",
     "core-js": "^2.4.1",
-    "numbertowords": "0.0.3",
+    "npm-check-updates": "^2.8.9",
+    "numbertowords": "0.0.5",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
