--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~3.1.0",
     "cnp.js": "0.0.2",
     "core-js": "^2.4.1",
+    "lodash": "^4.17.4",
     "numbertowords": "0.0.3",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
