--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@angular/router": "^3.3.1",
     "cnp.js": "0.0.2",
     "core-js": "^2.4.1",
+    "csvtojson": "^1.1.2",
     "lodash": "^4.17.4",
     "npm-check-updates": "^2.8.9",
     "numbertowords": "0.0.9",
+    "python": "0.0.4",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
