--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lodash": "^4.17.4",
     "npm-check-updates": "^2.8.9",
     "numbertowords": "0.0.16",
-    "pdfmake": "^0.1.22",
+    "pdfmake": "0.1.24",
     "rxjs": "5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
