--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "csvtojson": "^1.1.2",
     "lodash": "^4.17.4",
     "npm-check-updates": "^2.8.9",
-    "numbertowords": "0.0.16",
+    "numbertowords": "^0.0.16",
     "pdfmake": "0.1.24",
     "rxjs": "5.0.1",
     "ts-helpers": "^1.1.1",
